src/tests/snapshots/amber__tests__translating__modulo_num_expression.ab__ksh.snap
---
source: src/tests/translating.rs
expression: ast
---
Block(
    BlockFragment {
        statements: [
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "%",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "10.5",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "3.2",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "%",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN { print ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "%",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2] }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "20.4",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "6.0",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "3.1",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: false,
                        },
                    ),
                },
            ),
            Log(
                LogFragment {
                    value: Subprocess(
                        SubprocessFragment {
                            fragment: List(
                                ListFragment {
                                    values: [
                                        Raw(
                                            RawFragment {
                                                value: "awk 'BEGIN { print ARGV[1]",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "%",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "ARGV[2] }'",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Subprocess(
                                            SubprocessFragment {
                                                fragment: List(
                                                    ListFragment {
                                                        values: [
                                                            Raw(
                                                                RawFragment {
                                                                    value: "awk 'BEGIN { print ARGV[1]",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "%",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "ARGV[2] }'",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Subprocess(
                                                                SubprocessFragment {
                                                                    fragment: List(
                                                                        ListFragment {
                                                                            values: [
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "awk 'BEGIN { print ARGV[1]",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "%",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "ARGV[2] }'",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "100.0",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: " ",
                                                                                    },
                                                                                ),
                                                                                Raw(
                                                                                    RawFragment {
                                                                                        value: "7.5",
                                                                                    },
                                                                                ),
                                                                            ],
                                                                            separator: Empty,
                                                                        },
                                                                    ),
                                                                    quoted: false,
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: " ",
                                                                },
                                                            ),
                                                            Raw(
                                                                RawFragment {
                                                                    value: "3.0",
                                                                },
                                                            ),
                                                        ],
                                                        separator: Empty,
                                                    },
                                                ),
                                                quoted: false,
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: " ",
                                            },
                                        ),
                                        Raw(
                                            RawFragment {
                                                value: "2.5",
                                            },
                                        ),
                                    ],
                                    separator: Empty,
                                },
                            ),
                            quoted: false,
                        },
                    ),
                },
            ),
        ],
        increase_indent: true,
        needs_noop: false,
        is_conditional: false,
    },
)
